src/objects/Profile_Info__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>A custom setting for holding information for users/profiles in the resumes application</description>
    <fields>
        <fullName>Generation_Debugging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generation Debugging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heroku_Endpoint__c</fullName>
        <description>Endpoint URL for Heroku Resume Generation</description>
        <label>Heroku Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Content_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Content Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <label>Resumes - Profile Info</label>
</CustomObject>